Add a compat bound for StyledStrings

--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "1.11.0"
 StyledStrings = "f489334b-da3d-4c2e-b8f0-e476e12c162b"
 
 [compat]
+StyledStrings = "1.0"
 julia = "1.11"
 
 [extras]
