--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,16 @@
 name = "JuliaSyntaxHighlighting"
-uuid = "dc6e5ff7-fb65-4e79-a425-ec3bc9c03011"
+uuid = "ac6e5ff7-fb65-4e79-a425-ec3bc9c03011"
 authors = ["TEC <git@tecosaur.net>"]
-version = "1.12.0"
+version = "0.1.0"
 
 [deps]
+JuliaSyntax = "70703baa-626e-46a2-a12c-08ffd08c73b4"
 StyledStrings = "f489334b-da3d-4c2e-b8f0-e476e12c162b"
 
 [compat]
+JuliaSyntax = "0.4"
 StyledStrings = "1.0"
-julia = "1.11"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
